Fix showing pop un on Safari.

--- a/src/style/chart.css
+++ b/src/style/chart.css
@@ -60,6 +60,9 @@ svg .transparent {
         font: 600 15px sans-serif;
     }
 }
+.hover {
+    fill: transparent;
+}
 
 .night {
     .line line {
